After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778596 - Pre v0.3.4 release fixes
Pre v0.3.4 release fixes
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2017-02-14 09:50 UTC by Victor Toso
Modified: 2017-02-14 11:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lua-factory: _load_goa_data() only if goa is available (1.90 KB, patch)
2017-02-14 09:50 UTC, Victor Toso
committed Details | Review
meson: include optional dependencies (18.10 KB, patch)
2017-02-14 09:51 UTC, Victor Toso
committed Details | Review

Description Victor Toso 2017-02-14 09:50:54 UTC
:)
Comment 1 Victor Toso 2017-02-14 09:50:59 UTC
Created attachment 345707 [details] [review]
lua-factory: _load_goa_data() only if goa is available

Let's wrap grl_lua_library_load_goa_data() to be build only if
GOA_ENABLED is declared, otherwise we will get -Wunused-function

  grl-lua-library.c:1746:1: warning: ‘grl_lua_library_load_goa_data’
  defined but not used [-Wunused-function]

It is also worth to mention that grl_lua_factory_add_goa_source() in
grl-lua-factory.c is already wrapped this way.

Signed-off-by: Victor Toso <victortoso@redhat.com>
Comment 2 Victor Toso 2017-02-14 09:51:06 UTC
Created attachment 345708 [details] [review]
meson: include optional dependencies

Optional dependencies are being checked but not included in each
plugin and this patch aims to fix that.

Renamed DEPS to REQ_DEPS to make clear distinction with newly included
OPT_DEPS. The meson.build file for each plugin was updated for
completeness.

Signed-off-by: Victor Toso <victortoso@redhat.com>
Comment 3 Juan A. Suarez Romero 2017-02-14 10:37:33 UTC
Review of attachment 345707 [details] [review]:

LGTM
Comment 4 Juan A. Suarez Romero 2017-02-14 10:38:57 UTC
Review of attachment 345708 [details] [review]:

LGTM
Comment 5 Victor Toso 2017-02-14 11:21:29 UTC
Attachment 345707 [details] pushed as 50fe652 - lua-factory: _load_goa_data() only if goa is available
Attachment 345708 [details] pushed as a0375ad - meson: include optional dependencies