lua-factory: _load_goa_data() only if goa is available

Let's wrap grl_lua_library_load_goa_data() to be build only if
GOA_ENABLED is declared, otherwise we will get -Wunused-function

  grl-lua-library.c:1746:1: warning: ‘grl_lua_library_load_goa_data’
  defined but not used [-Wunused-function]

It is also worth to mention that grl_lua_factory_add_goa_source() in
grl-lua-factory.c is already wrapped this way.

Signed-off-by: Victor Toso <victortoso@redhat.com>

https://bugzilla.gnome.org/show_bug.cgi?id=778596